--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start:ce": "ng serve --project external-dashboard-tile -o",
     "build:ce": "npm run bundle:ce && npm run copy:ce",
     "copy:ce": "cpr dist/external-dashboard-tile/main.js src/assets/external-dashboard-tile.bundle.js -o",
-    "bundle:ce": "ng build --project external-dashboard-tile --prod --output-hashing none"
+    "bundle:ce": "ng build --project external-dashboard-tile --prod --output-hashing none",
+    "build:modern": "ng build --plugin ngx-build-modern --prod",
+    "build:modern:dashboard-tile": "ng build --plugin ngx-build-modern --project dashboard-tile --prod"
   },
   "private": true,
   "dependencies": {
@@ -28,11 +30,12 @@
     "@webcomponents/custom-elements": "^1.1.2",
     "application": "^0.1.4",
     "core-js": "^2.5.4",
+    "document-register-element": "^1.7.2",
     "install": "^0.12.1",
+    "ngx-build-modern": "^1.1.7",
     "npm": "^6.5.0",
     "rxjs": "^6.3.3",
-    "zone.js": "^0.8.26",
-    "document-register-element": "^1.7.2"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.11.4",
@@ -52,7 +55,7 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ngx-build-plus": "^1.1.0",
+    "ngx-build-plus": "^7.7.2",
     "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
