--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "copy:ce": "cpr dist/external-dashboard-tile/main.js src/assets/external-dashboard-tile.bundle.js -o",
     "bundle:ce": "ng build --project external-dashboard-tile --prod --output-hashing none",
     "build:modern": "ng build --plugin ngx-build-modern --prod",
-    "build:modern:dashboard-tile": "ng build --plugin ngx-build-modern --project dashboard-tile --prod"
+    "build:modern:dashboard-tile": "ng build --plugin ngx-build-modern --project dashboard-tile --prod",
+    "npx-build-plus:copy-assets": "node projects/dashboard-tile/copy-wc-polyfill.js"
   },
   "private": true,
   "dependencies": {
@@ -28,17 +29,20 @@
     "@angular/router": "^7.1.4",
     "@swimlane/ngx-charts": "^8.1.0",
     "@webcomponents/custom-elements": "^1.1.2",
+    "@webcomponents/webcomponentsjs": "^2.2.5",
     "application": "^0.1.4",
+    "copy": "^0.3.2",
     "core-js": "^2.5.4",
     "document-register-element": "^1.7.2",
     "install": "^0.12.1",
+    "ngx-build-modern": "^1.1.7",
     "npm": "^6.5.0",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.11.4",
-    "@angular/cli": "~7.1.4",
+    "@angular/cli": "~7.3.0",
     "@angular/compiler-cli": "^7.1.4",
     "@angular/elements": "^7.1.4",
     "@angular/language-service": "^7.1.4",
