--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.4",
-    "@angular/common": "^7.1.4",
-    "@angular/compiler": "^7.1.4",
-    "@angular/core": "^7.1.4",
-    "@angular/forms": "^7.1.4",
+    "@angular/animations": "^8.2.13",
+    "@angular/common": "^8.2.13",
+    "@angular/compiler": "^8.2.13",
+    "@angular/core": "^8.2.13",
+    "@angular/forms": "^8.2.13",
     "@angular/http": "^7.1.4",
-    "@angular/platform-browser": "^7.1.4",
-    "@angular/platform-browser-dynamic": "^7.1.4",
-    "@angular/router": "^7.1.4",
+    "@angular/platform-browser": "^8.2.13",
+    "@angular/platform-browser-dynamic": "^8.2.13",
+    "@angular/router": "^8.2.13",
     "@open-wc/polyfills-loader": "^0.2.0",
     "@swimlane/ngx-charts": "^8.1.0",
     "@webcomponents/custom-elements": "^1.1.2",
@@ -36,17 +36,17 @@
     "core-js": "^2.5.4",
     "document-register-element": "^1.7.2",
     "install": "^0.12.1",
-    "ngx-build-modern": "^1.1.7",
+    "ngx-build-plus": "^9.0.2",
     "npm": "^6.5.0",
-    "rxjs": "^6.3.3",
-    "zone.js": "^0.8.29"
+    "rxjs": "^6.5.3",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.0",
-    "@angular/cli": "~7.3.0",
-    "@angular/compiler-cli": "^7.1.4",
-    "@angular/elements": "^7.1.4",
-    "@angular/language-service": "^7.1.4",
+    "@angular-devkit/build-angular": "^0.803.17",
+    "@angular/cli": "~8.3.17",
+    "@angular/compiler-cli": "^8.2.13",
+    "@angular/elements": "^8.2.13",
+    "@angular/language-service": "^8.2.13",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -59,11 +59,9 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ngx-build-plus": "^7.7.2",
     "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.2.4",
-    "webpack-dev-server": "^3.1.14"
+    "typescript": "~3.5.3"
   }
 }
