--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.13",
-    "@angular/common": "^8.2.13",
-    "@angular/compiler": "^8.2.13",
-    "@angular/core": "^8.2.13",
-    "@angular/forms": "^8.2.13",
+    "@angular/animations": "^9.0.0-rc.0",
+    "@angular/common": "^9.0.0-rc.0",
+    "@angular/compiler": "^9.0.0-rc.0",
+    "@angular/core": "^9.0.0-rc.0",
+    "@angular/forms": "^9.0.0-rc.0",
     "@angular/http": "^7.1.4",
-    "@angular/platform-browser": "^8.2.13",
-    "@angular/platform-browser-dynamic": "^8.2.13",
-    "@angular/router": "^8.2.13",
+    "@angular/platform-browser": "^9.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.0",
+    "@angular/router": "^9.0.0-rc.0",
     "@open-wc/polyfills-loader": "^0.2.0",
     "@swimlane/ngx-charts": "^8.1.0",
     "@webcomponents/custom-elements": "^1.1.2",
@@ -39,14 +39,14 @@
     "ngx-build-plus": "^9.0.2",
     "npm": "^6.5.0",
     "rxjs": "^6.5.3",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.17",
-    "@angular/cli": "~8.3.17",
-    "@angular/compiler-cli": "^8.2.13",
-    "@angular/elements": "^8.2.13",
-    "@angular/language-service": "^8.2.13",
+    "@angular-devkit/build-angular": "^0.900.0-rc.0",
+    "@angular/cli": "~9.0.0-rc.0",
+    "@angular/compiler-cli": "^9.0.0-rc.0",
+    "@angular/elements": "^9.0.0-rc.0",
+    "@angular/language-service": "^9.0.0-rc.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -62,6 +62,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.5.3"
+    "typescript": "~3.6.4"
   }
 }
