migrate workspace for @angular/cli@9.0.0-beta.0

--- a/angular.json
+++ b/angular.json
@@ -115,6 +115,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/playground-app",
             "index": "projects/playground-app/src/index.html",
             "main": "projects/playground-app/src/main.ts",
@@ -151,6 +152,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
               ]
             }
