--- a/package.json
+++ b/package.json
@@ -1,69 +1,51 @@
 {
-  "name": "dashboard",
+  "name": "build-example",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
-    "start": "ng serve --project dashboard-tile -o",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start:ce": "ng serve --project external-dashboard-tile -o",
-    "build:ce": "npm run bundle:ce && npm run copy:ce",
-    "copy:ce": "cpr dist/external-dashboard-tile/main.js src/assets/external-dashboard-tile.bundle.js -o",
-    "bundle:ce": "ng build --project external-dashboard-tile --prod --output-hashing none",
-    "build:modern": "ng build --plugin ngx-build-modern --prod",
-    "build:modern:dashboard-tile": "ng build --plugin ngx-build-modern --project dashboard-tile --prod",
-    "npx-build-plus:copy-assets": "node projects/dashboard-tile/copy-wc-polyfill.js"
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.0",
-    "@angular/common": "^9.0.0-rc.0",
-    "@angular/compiler": "^9.0.0-rc.0",
-    "@angular/core": "^9.0.0-rc.0",
-    "@angular/forms": "^9.0.0-rc.0",
-    "@angular/http": "^7.1.4",
-    "@angular/platform-browser": "^9.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.0",
-    "@angular/router": "^9.0.0-rc.0",
-    "@open-wc/polyfills-loader": "^0.2.0",
-    "@swimlane/ngx-charts": "^8.1.0",
-    "@webcomponents/custom-elements": "^1.1.2",
-    "@webcomponents/webcomponentsjs": "^2.2.5",
-    "application": "^0.1.4",
-    "copy": "^0.3.2",
-    "core-js": "^2.5.4",
-    "document-register-element": "^1.7.2",
-    "install": "^0.12.1",
+    "@angular/animations": "~9.0.0-rc.0",
+    "@angular/common": "~9.0.0-rc.0",
+    "@angular/compiler": "~9.0.0-rc.0",
+    "@angular/core": "~9.0.0-rc.0",
+    "@angular/elements": "^8.2.13",
+    "@angular/forms": "~9.0.0-rc.0",
+    "@angular/platform-browser": "~9.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.0",
+    "@angular/router": "~9.0.0-rc.0",
+    "@webcomponents/webcomponentsjs": "^2.3.0",
     "ngx-build-plus": "^9.0.2",
-    "npm": "^6.5.0",
-    "rxjs": "^6.5.3",
+    "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.0-rc.0",
     "@angular/cli": "~9.0.0-rc.0",
-    "@angular/compiler-cli": "^9.0.0-rc.0",
-    "@angular/elements": "^9.0.0-rc.0",
-    "@angular/language-service": "^9.0.0-rc.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular/compiler-cli": "~9.0.0-rc.0",
+    "@angular/language-service": "~9.0.0-rc.0",
     "@types/node": "^12.11.1",
+    "@types/jasmine": "~3.4.0",
+    "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.1.2",
-    "cpr": "^3.0.1",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.4",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.2",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
     "typescript": "~3.6.4"
   }
 }
