--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "postinstall": "ngcc",
+    "postinstall:bak": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "build:dashboard-tile:externals": "ng build --extra-webpack-config projects/dashboard-tile/webpack.externals.js --prod --project dashboard-tile --single-bundle"
   },
   "private": true,
   "dependencies": {
